ERE-785 * Build PoPP functionality into ere-ps-app