@@ -1,43 +1,37 @@
 package health.ere.ps.service.kbv;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.util.List;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import java.util.stream.Collectors;
-
-import jakarta.annotation.PostConstruct;
-import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.enterprise.event.Event;
-import jakarta.enterprise.event.ObservesAsync;
-import jakarta.inject.Inject;
-import javax.xml.XMLConstants;
-import javax.xml.transform.ErrorListener;
-import javax.xml.transform.Result;
-import javax.xml.transform.Source;
-import javax.xml.transform.Transformer;
-import javax.xml.transform.TransformerException;
-import javax.xml.transform.TransformerFactory;
-import javax.xml.transform.stream.StreamResult;
-import javax.xml.transform.stream.StreamSource;
-
-import org.apache.commons.io.output.ByteArrayOutputStream;
-import org.hl7.fhir.r4.model.Bundle;
-
 import ca.uhn.fhir.context.FhirContext;
 import health.ere.ps.event.HTMLBundlesEvent;
 import health.ere.ps.event.ReadyToSignBundlesEvent;
 import health.ere.ps.service.fhir.FHIRService;
+import health.ere.ps.service.transformer.XmlTransformerProvider;
 import health.ere.ps.websocket.ExceptionWithReplyToException;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.event.Event;
+import jakarta.enterprise.event.ObservesAsync;
+import jakarta.inject.Inject;
+import org.apache.commons.io.output.ByteArrayOutputStream;
+import org.hl7.fhir.r4.model.Bundle;
+
+import javax.xml.transform.Result;
+import javax.xml.transform.Source;
+import javax.xml.transform.Transformer;
+import javax.xml.transform.TransformerException;
+import javax.xml.transform.stream.StreamResult;
+import javax.xml.transform.stream.StreamSource;
+import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.util.Collection;
+import java.util.List;
+import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class XSLTService {
 
-    private static Logger log = Logger.getLogger(XSLTService.class.getName());
+    private static final Logger log = Logger.getLogger(XSLTService.class.getName());
 
     private static final FhirContext fhirContext = FHIRService.getFhirContext();
 
@@ -47,51 +41,8 @@ public class XSLTService {
     @Inject
     Event<HTMLBundlesEvent> hTMLBundlesEvent;
 
-    Transformer transformer;
-
-    @PostConstruct
-    public void init() {
-
-        try {
-            // Step 4: Setup JAXP using identity transformer
-            TransformerFactory factory = TransformerFactory.newInstance("net.sf.saxon.TransformerFactoryImpl", null);
-            factory.setAttribute(XMLConstants.ACCESS_EXTERNAL_DTD, "");
-            factory.setAttribute(XMLConstants.ACCESS_EXTERNAL_STYLESHEET, "");
-
-            // with XSLT:
-            String xslPath = "/kbv-xslt/ERP_Stylesheet.xslt";
-
-            InputStream inputStream = getClass().getResourceAsStream(xslPath);
-            String systemId = this.getClass().getResource(xslPath).toExternalForm();
-            StreamSource xslt = new StreamSource(inputStream, systemId);
-            xslt.setPublicId(systemId);
-            factory.setErrorListener(new ErrorListener() {
-                private static final String MSG = "Error in XSLT:";
-
-                @Override
-                public void warning(TransformerException exception) {
-                    log.warning(MSG + exception);
-
-                }
-
-                @Override
-                public void fatalError(TransformerException exception) {
-                    log.severe(MSG + exception);
-
-                }
-
-                @Override
-                public void error(TransformerException exception) {
-                    log.severe(MSG + exception);
-                }
-            });
-
-            transformer = factory.newTransformer(xslt);
-        } catch (Exception e) {
-            log.log(Level.SEVERE, "Could not init XSLTService", e);
-        }
-
-    }
+    @Inject
+    XmlTransformerProvider xmlTransformerProvider;
 
     public String generateHtmlForBundle(Bundle bundle) throws IOException, TransformerException {
         String xmlString = fhirContext.newXmlParser().encodeResourceToString(bundle);
@@ -100,34 +51,31 @@ public class XSLTService {
 
     public String generateHtmlForString(String xmlString) throws IOException, TransformerException {
         File xml = Files.createTempFile("bundle-", ".xml").toFile();
-        Files.write(xml.toPath(), xmlString.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(xml.toPath(), xmlString);
 
-        // Step 2: Set up output stream.
+        // Step 1: Set up output stream.
         // Note: Using BufferedOutputStream for performance reasons (helpful with
         // FileOutputStreams).
         ByteArrayOutputStream out = new ByteArrayOutputStream();
 
-        // Step 5: Setup input and output for XSLT transformation
+        // Step 2: Setup input and output for XSLT transformation
         // Setup input stream
         Source src = new StreamSource(xml);
 
         // Resulting SAX events (the generated FO) must be piped through to FOP
         Result res = new StreamResult(out);
 
-        // Step 6: Start XSLT transformation and FOP processing
+        // Step 3: Start XSLT transformation and FOP processing
+        Transformer transformer = xmlTransformerProvider.getTransformer("/kbv-xslt/ERP_Stylesheet.xslt");
         transformer.transform(src, res);
 
         return new String(out.toByteArray(), StandardCharsets.UTF_8);
     }
 
     public void onReadyToSignBundlesEvent(@ObservesAsync ReadyToSignBundlesEvent readyToSignBundlesEvent) {
-
         log.info(String.format("Received %d bundles to show for signature ", readyToSignBundlesEvent.listOfListOfBundles.size()));
-        
-        List<String> htmlBundlesList;
-
         try {
-            htmlBundlesList = readyToSignBundlesEvent.listOfListOfBundles.stream().flatMap(l -> l.stream()).map(bundle -> {
+            List<String> htmlBundlesList = readyToSignBundlesEvent.listOfListOfBundles.stream().flatMap(Collection::stream).map(bundle -> {
                 try {
                     return generateHtmlForBundle(bundle);
                 } catch (Exception e) {
@@ -136,7 +84,7 @@ public class XSLTService {
                 }
             }).collect(Collectors.toList());
             hTMLBundlesEvent.fireAsync(new HTMLBundlesEvent(htmlBundlesList, readyToSignBundlesEvent.getReplyTo(), readyToSignBundlesEvent.getReplyToMessageId()));
-        } catch(Exception ex) {
+        } catch (Exception ex) {
             exceptionEvent.fireAsync(new ExceptionWithReplyToException(ex, readyToSignBundlesEvent.getReplyTo(), readyToSignBundlesEvent.getReplyToMessageId()));
         }
     }
